2007-10-21 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_dir_view.[ch]: Remove parent_win arg from
	gimv_dir_view_create().
	* src/gimv_thumb_win.c: Follow the change.

2007-10-21 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_text_win.[ch]: GObjectize.
	* src/help.c: Follow the change.

2007-10-21 Takuro Ashie <ashie@homa.ne.jp>

	* src/cursors.[ch]: Removed.
	* src/gimv_icon_stock.[ch]: Moved codes in src/cursors.[ch] to here.
	* src/Makefile.am, src/gimv_image_view.c, src/gimv_image_view_draw.c,
	  src/gimv_image_win.c: Follow the change.
	* configure.ac: Remove src/cursors/Makefile.in.

2007-10-21 Takuro Ashie <ashie@homa.ne.jp>

	* src/cursors/*: Moved to src/pixmaps/
	* src/Makefile.am. src/cursors.[ch], src/pixmaps/Makefile.am:
	Follow the change.
	* src/cursors: Removed.

2007-10-21 Takuro Ashie <ashie@homa.ne.jp>

	* plugins/image_saver/Makefile.am, plugins/io_stream/Makefile.am,
	  plugins/thumbnail/Makefile.am, plugins/image_loader/Makefile.am,
	  plugins/image_view/Makefile.am, plugins/thumbnail_view/Makefile.am,
	  src/Makefile.am, src/prefs_ui/Makefile.am, Makefile.am:
	Remove .deps/* from CLEANFILES.

2007-10-21 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_slideshow.[ch]: GObjectize.
	* src/gimageview.c: Move GimvSlideshow declaration to gimv_slideshow.h

2007-10-21 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimageview.c, src/gimv_slideshow.[ch]:
	Declare givm_slideshow_open_window() and gimv_slideshow_delete() as
	private.

2007-10-21 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_comment.[ch], src/gimv_comment_view.c:
	Remove gimv_comment_ref() and gimv_comment_unref().

2007-10-21 Takuro Ashie <ashie@homa.ne.jp>

	* plugins/image_loader/pixbuf_anim.c, plugins/image_loader/mng.c,
	  plugins/image_loader/pixbuf_loader.c,
	  plugins/image_view/image_view_xine.c,
	  plugins/image_view/image_view_mplayer.c,
	  src/gimv_thumb.c, src/gimv_image_view.c, src/gimv_image_loader.c,
	  src/gimv_image.c, src/gimv_image.h, src/gimv_image_saver.c,